--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tsconfig/svelte": "^1.0.0",
     "@types/jest": "^26.0.14",
     "babel-jest": "^26.5.2",
+    "classnames": "^2.3.1",
     "jest": "^26.5.2",
     "rollup": "^2.3.4",
     "rollup-plugin-livereload": "^2.0.0",
