--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^6.0.0",
     "rollup-plugin-terser": "^7.0.0",
+    "speak-tts": "^2.0.8",
     "svelte": "^3.0.0",
     "svelte-check": "^1.0.0",
     "svelte-jester": "^1.1.5",
